syntax = "proto3"; 

message AnalysisData {
  string id = 1;
  string document = 2;
  string status = 3;
}

message CreateAnalysisRequest {
  string document = 1;
}

message CreateAnalysisResponse {
  AnalysisData analysis = 1;
}

message GetCreditInfoRequest {
  string document = 1;
}

message GetCreditInfoResponse {
  string status = 1;
}

message AddDocumentRequest {
  string analysisId = 1;
  string docUrl = 2;
}

message AddDocumentResponse {
  string status = 1;
}

service Risk {
  // Unary
  rpc createAnalysis(CreateAnalysisRequest) returns (CreateAnalysisResponse) {}
  // Server Streaming
  rpc getCreditInfo(GetCreditInfoRequest) returns (stream GetCreditInfoResponse) {}
  // Client & Server Streaming (Bidirectional Streaming)
  rpc addDocument(stream AddDocumentRequest) returns (stream AddDocumentResponse) {} 
}